--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
 
 .room-tile {
   background-color: white;
+  /*background-image: url("img/corner1.png");*/
   height: 900px;
   border: 3px solid black;
   margin-left: 90px;
