--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -9,7 +9,7 @@
   <div>
     <%= f.label :name, "Room name" %>
     <br>
-    <%= f.text_area :name %>
+    <%= f.text_field :name %>
   </div>
 
   <%= f.submit "Enter Room" %>
