added react components for each corner but currently unable to render basd off of routes coming from database

--- a/app/assets/javascripts/assetHelper.js.erb
+++ b/app/assets/javascripts/assetHelper.js.erb
@@ -1,3 +1,4 @@
 let assetHelper = {
-  "bed.png": "<%= asset_path("bed.png") %>"
+  "bed.png": "<%= asset_path("bed.png") %>",
+  "door.png": "<%= asset_path("door.png") %>"
 }
