successfully implemented react based navigation

--- a/app/assets/javascripts/assetHelper.js.erb
+++ b/app/assets/javascripts/assetHelper.js.erb
@@ -1,4 +1,7 @@
 let assetHelper = {
   "bed.png": "<%= asset_path("bed.png") %>",
-  "door.png": "<%= asset_path("door.png") %>"
+  "door.png": "<%= asset_path("door.png") %>",
+  "broom.png": "<%= asset_path("broom.png") %>",
+  "plant.png": "<%= asset_path("plant.png") %>",
+  "window.png": "<%= asset_path("window.png") %>"
 }
