updating plant health with onclick

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,9 @@
  .hidden {
   display: none;
 }
-
+body {
+  background-color: black;
+}
 .room-container {
   background-color: blue;
   height: 1000px;
