changed let to var

--- a/app/assets/javascripts/assetHelper.js.erb
+++ b/app/assets/javascripts/assetHelper.js.erb
@@ -1,4 +1,4 @@
-let assetHelper = {
+var assetHelper = {
   "bed.png": "<%= asset_path("bed.png") %>",
   "door.png": "<%= asset_path("door.png") %>",
   "broom.png": "<%= asset_path("broom.png") %>",
