--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -114,8 +114,8 @@ li {
 }
 .door-img {
   position:absolute;
-  margin-left: 200px;
-  margin-top: -56px;
+  margin-left: 110px;
+  margin-top: 8px;
 }
 .broom-img {
   position:absolute;
@@ -123,7 +123,14 @@ li {
   margin-top: 60px;
 }
 .room-name {
-  color: white;
+  color: black;
   text-align: center;
-  padding-bottom: 40px;
+  padding-bottom: 10px;
+}
+.statuses {
+  padding-top: 10px;
+  width: 500px;
+  margin-right: auto;
+  margin-left: auto;
+  max-height: 50px;
 }
