added key view, no onclick functionality yet

--- a/app/assets/javascripts/assetHelper.js.erb
+++ b/app/assets/javascripts/assetHelper.js.erb
@@ -3,5 +3,11 @@ var assetHelper = {
   "door.png": "<%= asset_path("door.png") %>",
   "broom.png": "<%= asset_path("broom.png") %>",
   "plant.png": "<%= asset_path("plant.png") %>",
-  "window.png": "<%= asset_path("window.png") %>"
+  "window.png": "<%= asset_path("window.png") %>",
+  "book.png": "<%= asset_path("book.png") %>",
+  "chair.png": "<%= asset_path("chair.png") %>",
+  "cupboard.png": "<%= asset_path("cupboard.png") %>",
+  "key.png": "<%= asset_path("key.png") %>",
+  "keyclose.png": "<%= asset_path("keyclose.png") %>"
+
 }
