--- a/app/assets/stylesheets/clutter_corner.scss
+++ b/app/assets/stylesheets/clutter_corner.scss
@@ -10,7 +10,24 @@
   width: 520px;
   height: 390px;
   border: 5px solid #816535;
-  // display: block;
-  // margin-left: auto;
-  // margin-right: auto;
+}
+.cupboard-img {
+  position:absolute;
+  margin-left: 30px;
+  margin-top: 17px;
+}
+.chair-img {
+  position:absolute;
+  margin-left: 300px;
+  margin-top: 94px;
+}
+.book-img {
+  position:absolute;
+  margin-left: 90px;
+  margin-top: 93px;
+}
+.key-img {
+  position:absolute;
+  margin-left: 125px;
+  margin-top: 101px;
 }
