--- a/app/assets/stylesheets/room_tile.scss
+++ b/app/assets/stylesheets/room_tile.scss
@@ -25,6 +25,7 @@
   margin-left: 20px;
 }
 .room-wrapper {
+  margin-top:20px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -33,7 +34,7 @@
 .left {
   position: absolute;
   margin-top: 400px;
-  font-size: 20px;
+  font-size: 24px;
 }
 .left:hover {
   -moz-transform: translate(-4px);
@@ -45,8 +46,8 @@
 .right {
   position: absolute;
   margin-top: 400px;
-  margin-left: 490px;
-  font-size: 20px;
+  margin-left: 486px;
+  font-size: 24px;
 }
 .right:hover {
   -moz-transform: translate(4px);
