--- a/app/assets/stylesheets/room_tile.scss
+++ b/app/assets/stylesheets/room_tile.scss
@@ -39,6 +39,10 @@
   margin-left: 20px;
   background: white;
 }
+.inventory-selected {
+  margin-left: 65px;
+  margin-top: 40px;
+}
 .room-wrapper {
   margin-top:20px;
   display: block;
@@ -50,6 +54,12 @@
   position: absolute;
   margin-top: 400px;
   font-size: 24px;
+}
+.left:focus {
+  outline:0;
+}
+.right:focus {
+  outline:0;
 }
 .left:hover {
   -moz-transform: translate(-4px);
