--- a/app/assets/stylesheets/clutter_corner.scss
+++ b/app/assets/stylesheets/clutter_corner.scss
@@ -13,13 +13,13 @@
 }
 .cupboard-img {
   position:absolute;
-  margin-left: 30px;
-  margin-top: 17px;
+  margin-left: 33px;
+  margin-top: 23px;
 }
 .chair-img {
   position:absolute;
-  margin-left: 300px;
-  margin-top: 94px;
+  margin-left: 313px;
+  margin-top: 118px;
 }
 .book-img {
   position:absolute;
@@ -29,5 +29,15 @@
 .key-img {
   position:absolute;
   margin-left: 125px;
-  margin-top: 101px;
+  margin-top: 98px;
+}
+.key-img:hover {
+  -webkit-transition: all 75ms ease;
+  -moz-transition: all 75ms ease;
+  -ms-transition: all 75ms ease;
+  -o-transition: all 75ms ease;
+  transition: all 75ms ease;
+  transition: all 75ms ease;
+  -webkit-filter: drop-shadow(1px 1px 0px #737373);
+  filter: drop-shadow(1px 1px 0px #737373);
 }
