--- a/app/assets/stylesheets/key_look.scss
+++ b/app/assets/stylesheets/key_look.scss
@@ -13,9 +13,16 @@
 
 }
 .keyclose-img {
-
+  margin-left: 230px;
+  margin-top: 180px;
 }
 .keyclose-img:hover {
-  -webkit-filter: drop-shadow(5px 0px 5px #222);
-  filter: drop-shadow(5px 0px 5px #222);
+  -webkit-transition: all 75ms ease;
+  -moz-transition: all 75ms ease;
+  -ms-transition: all 75ms ease;
+  -o-transition: all 75ms ease;
+  transition: all 75ms ease;
+  transition: all 75ms ease;
+  -webkit-filter: drop-shadow(2px 2px 0px #737373);
+  filter: drop-shadow(2px 2px 0px #737373);
 }
