--- a/app/assets/stylesheets/plant_corner.scss
+++ b/app/assets/stylesheets/plant_corner.scss
@@ -13,11 +13,21 @@
 }
 .window-img {
   position:absolute;
-  margin-left: 300px;
+  margin-left: 310px;
   margin-top: 10px;
 }
 .plant-img {
   position:absolute;
-  margin-left: 150px;
-  margin-top: 30px;
+  margin-left: 170px;
+  margin-top: 45px;
+}
+.plant-img:hover {
+  -webkit-transition: all 75ms ease;
+  -moz-transition: all 75ms ease;
+  -ms-transition: all 75ms ease;
+  -o-transition: all 75ms ease;
+  transition: all 75ms ease;
+  transition: all 75ms ease;
+  -webkit-filter: drop-shadow(2px -2px 0px #737373);
+  filter: drop-shadow(2px -2px 0px #737373);
 }
