added profile link to react router

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="navbar menu align-right hidden">
+    <div class="navbar menu align-right">
       <ul>
         <li>
           <% if user_signed_in? %>
