--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,18 +1,120 @@
 @import "settings";
 
 .alert {
-  position: relative;
-  width: 40%;
-  margin: 20px auto;
+  text-align: left;
+  bottom: 0;
+  color: black;
+  font-size: 14px;
+  margin: 0;
+  position:fixed;
+  padding: 5px;
+  z-index: 5;
+  font-family: 'Fira Mono', monospace;
 }
 .alert-success {
-  position:absolute;
+
+}
+
+.logged-in {
+  text-align: right;
+  width: 100%;
+  bottom: 0;
+  color: black;
+  font-size: 14px;
+  position:fixed;
+  padding: 10px;
+  z-index: 5;
+  background-color: #f9ecda;
+  font-family: 'Fira Mono', monospace;
+  border-top: 2px solid black;
+}
+.navbar-link:hover {
+  text-decoration: line-through;
+  color:black;
+}
+.navbar-link:focus {
+  text-decoration: line-through;
+  color:black;
+}
+.logged-out {
+  text-align: right;
+  width: 100%;
+  bottom: 0;
+  color: black;
+  font-size: 14px;
+  position:fixed;
+  padding: 10px;
+  z-index: 5;
+  background-color: #f9ecda;
+  font-family: 'Fira Mono', monospace;
+  border-top: 2px solid black;
+}
+.splash-logged {
+  font-family: 'Fira Mono', monospace;
+  color: black;
+  display: block;
+  width: 300px;
   text-align: center;
-  margin-top: 150px;
-  left: 50%;
-  margin-left: -50px;
+  margin-left: auto;
+  margin-right: auto;
   border: 2px solid black;
-  width: 200px;
-  z-index: 6;
-  background: white;
+  position:absolute;
+  z-index: 7;
+  background-color: white;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  left: 0;
+  right: 0;
+  margin-top: 150px;
+}
+.errors {
+  text-align: left;
+  bottom: 0;
+  color: black;
+  font-size: 14px;
+  margin: 0;
+  position:fixed;
+  padding: 5px;
+  z-index: 5;
+  font-family: 'Fira Mono', monospace;
+}
+.errors h1 {
+  font-size: 14px;
+  text-align: left;
+  bottom: 0;
+  color: black;
+  font-size: 14px;
+  margin: 0;
+  position:fixed;
+  padding: 5px;
+  z-index: 5;
+  font-family: 'Fira Mono', monospace;
+}
+.devise-form {
+  font-family: 'Fira Mono', monospace;
+  color: black;
+  display: block;
+  width: 600px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid black;
+  position:absolute;
+  z-index: 7;
+  background-color: white;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  left: 0;
+  right: 0;
+  margin-top: 150px;
+}
+.field {
+  width: 500px;
+}
+em {
+  font-size: 12px;
 }
