--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,3 +1,11 @@
-<div id ='app'>
-
-</div>
+<% if user_signed_in? %>
+  <div id='app'>
+  </div>
+<% else %>
+  <div class="splash-logged">
+    <h2>Indoors</h2>
+    <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %>
+    |
+    <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+  </div>
+<% end %>
