--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,27 @@ body {
   background-color: #f9ecda;
   border-bottom: 2px solid black;
 }
+.selected {
+  font-family: 'Fira Mono', monospace;
+  color: black;
+  display: block;
+  width: 500px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid black;
+  position:absolute;
+  z-index: 7;
+  background-color: white;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  left: 0;
+  right: 0;
+  margin-top: 100px;
+
+}
 .active:hover {
   text-decoration: line-through;
 }
