--- a/app/assets/stylesheets/bed_corner.scss
+++ b/app/assets/stylesheets/bed_corner.scss
@@ -1,6 +1,6 @@
 @import "settings";
 
-.bed-tile {
+.strange-room-wrapper .bed-tile {
   background-color: white;
   background-image: url("corner1.png");
   -webkit-background-size: cover;
@@ -11,8 +11,25 @@
   height: 390px;
   border: 5px solid #816535;
 }
-.bed-img {
+.strange-room-wrapper .bed-img {
   position:absolute;
   margin-left: 121px;
   margin-top: 127px;
+}
+.room-wrapper .bed-tile {
+  background-color: white;
+  background-image: url("corner1.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 600px;
+  height: 450px;
+  border: 5px solid #816535;
+}
+.room-wrapper .bed-img {
+  position:absolute;
+  margin-left: 121px;
+  margin-top: 127px;
+  width:375px;
 }
