--- a/app/assets/stylesheets/clutter_corner.scss
+++ b/app/assets/stylesheets/clutter_corner.scss
@@ -1,6 +1,6 @@
 @import "settings";
 
-.clutter-tile {
+.strange-room-wrapper .clutter-tile {
   background-color: white;
   background-image: url("corner2.png");
   -webkit-background-size: cover;
@@ -11,22 +11,22 @@
   height: 390px;
   border: 5px solid #816535;
 }
-.cupboard-img {
+.strange-room-wrapper .cupboard-img {
   position:absolute;
   margin-left: 33px;
   margin-top: 23px;
 }
-.chair-img {
+.strange-room-wrapper .chair-img {
   position:absolute;
   margin-left: 313px;
   margin-top: 118px;
 }
-.book-img {
+.strange-room-wrapper .book-img {
   position:absolute;
   margin-left: 90px;
   margin-top: 93px;
 }
-.key-img {
+.strange-room-wrapper .key-img {
   position:absolute;
   margin-left: 125px;
   margin-top: 98px;
@@ -40,4 +40,39 @@
   transition: all 75ms ease;
   -webkit-filter: drop-shadow(1px 1px 0px #737373);
   filter: drop-shadow(1px 1px 0px #737373);
+}
+.room-wrapper .clutter-tile {
+  background-color: white;
+  background-image: url("corner2.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 600px;
+  height: 450px;
+  border: 5px solid #816535;
+}
+.room-wrapper .cupboard-img {
+  position:absolute;
+  margin-left: 33px;
+  margin-top: 23px;
+  width: 183px;
+}
+.room-wrapper .chair-img {
+  position:absolute;
+  margin-left: 344px;
+  margin-top: 128px;
+  width: 82px;
+}
+.room-wrapper .book-img {
+  position:absolute;
+  margin-left: 90px;
+  margin-top: 107px;
+  width: 38px
+}
+.room-wrapper .key-img {
+  position:absolute;
+  margin-left: 125px;
+  margin-top: 115px;
+  width: 10px;
 }
