--- a/app/assets/stylesheets/door_corner.scss
+++ b/app/assets/stylesheets/door_corner.scss
@@ -1,6 +1,6 @@
 @import "settings";
 
-.door-tile {
+.strange-room-wrapper .door-tile {
   background-color: white;
   background-image: url("corner4.png");
   -webkit-background-size: cover;
@@ -11,12 +11,12 @@
   height: 390px;
   border: 5px solid #816535;
 }
-.door-img {
+.strange-room-wrapper .door-img {
   position:absolute;
   margin-left: 170px;
   margin-top: 17px;
 }
-.broom-img {
+.strange-room-wrapper .broom-img {
   position:absolute;
   margin-left: 310px;
   margin-top: 122px;
@@ -30,4 +30,27 @@
   transition: all 75ms ease;
   -webkit-filter: drop-shadow(2px 0px 0px #737373);
   filter: drop-shadow(2px 0px 0px #737373);
+}
+.door-tile {
+  background-color: white;
+  background-image: url("corner4.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 600px;
+  height: 450px;
+  border: 5px solid #816535;
+}
+.room-wrapper .door-img {
+  position:absolute;
+  margin-left: 170px;
+  margin-top: 19px;
+  width: 108px;
+}
+.room-wrapper .broom-img {
+  position:absolute;
+  margin-left: 365px;
+  margin-top: 140px;
+  width: 85px;
 }
