--- a/app/assets/stylesheets/plant_corner.scss
+++ b/app/assets/stylesheets/plant_corner.scss
@@ -1,6 +1,6 @@
 @import "settings";
 
-.plant-tile {
+.strange-room-wrapper .plant-tile {
   background-color: white;
   background-image: url("corner3.png");
   -webkit-background-size: cover;
@@ -11,12 +11,12 @@
   height: 390px;
   border: 5px solid #816535;
 }
-.window-img {
+.strange-room-wrapper .window-img {
   position:absolute;
   margin-left: 310px;
   margin-top: 10px;
 }
-.plant-img {
+.strange-room-wrapper .plant-img {
   position:absolute;
   margin-left: 170px;
   margin-top: 45px;
@@ -30,4 +30,27 @@
   transition: all 75ms ease;
   -webkit-filter: drop-shadow(2px -2px 0px #737373);
   filter: drop-shadow(2px -2px 0px #737373);
+}
+.room-wrapper .plant-tile {
+  background-color: white;
+  background-image: url("corner3.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 600px;
+  height: 450px;
+  border: 5px solid #816535;
+}
+.room-wrapper .window-img {
+  position:absolute;
+  margin-left: 310px;
+  margin-top: 10px;
+  width:130px;
+}
+.room-wrapper .plant-img {
+  position:absolute;
+  margin-left: 170px;
+  margin-top: 45px;
+  width: 110px
 }
