--- a/app/assets/stylesheets/plant_corner.scss
+++ b/app/assets/stylesheets/plant_corner.scss
@@ -1,7 +1,7 @@
 @import "settings";
 
 .strange-room-wrapper .plant-tile {
-  background-color: white;
+  background-color: #f2f2f2;
   background-image: url("corner3.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -32,7 +32,7 @@
   filter: drop-shadow(2px -2px 0px #737373);
 }
 .room-wrapper .plant-tile {
-  background-color: white;
+  background-color: #f2f2f2;
   background-image: url("corner3.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
