--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,15 +50,16 @@ body {
   display: flex;
   justify-content: space-between;
   color: black;
-  font-size: 14px;
+  font-size: 18px;
   position:fixed;
   padding: 5px;
   z-index: 5;
   top: 0;
-  background-color: #f9ecda;
-  border-bottom: 2px solid black;
+  background-color: #f9ecda;;
+  border-bottom: 1px solid black;
   padding-left: 25px;
   padding-right: 25px;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.4);
 }
 .selected {
   font-family: 'Fira Mono', monospace;
