--- a/app/assets/stylesheets/bed_corner.scss
+++ b/app/assets/stylesheets/bed_corner.scss
@@ -1,7 +1,7 @@
 @import "settings";
 
 .strange-room-wrapper .bed-tile {
-  background-color: white;
+  background-color: #f2f2f2;
   background-image: url("corner1.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -17,7 +17,7 @@
   margin-top: 127px;
 }
 .room-wrapper .bed-tile {
-  background-color: white;
+  background-color: #f2f2f2;
   background-image: url("corner1.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
