--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -27,6 +27,7 @@
   background-color: #f9ecda;
   font-family: 'Fira Mono', monospace;
   border-top: 2px solid black;
+  // box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.4);
 }
 .navbar-link:hover {
   text-decoration: line-through;
