--- a/app/assets/stylesheets/key_look.scss
+++ b/app/assets/stylesheets/key_look.scss
@@ -1,7 +1,7 @@
 @import "settings";
 
 .key-tile {
-  background-color: white;
+  background-color: #f2f2f2;
   // background-image: url("corner4.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
