--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,6 +61,9 @@ body {
   padding-right: 25px;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.4);
 }
+.nav-key {
+  width: 60px;
+}
 .selected {
   font-family: 'Fira Mono', monospace;
   color: black;
@@ -87,12 +90,23 @@ body {
 }
 .Link {
   border: 2px solid black;
-
+}
+.welcome-text {
+  margin-top: 50px;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+.welcome-text h2 {
+  text-align: center;
 }
 a {
   color: black;
 }
-
+p {
+  font-family: 'Fira Mono', monospace;
+}
 li {
   /*padding-right: 10px;*/
   font-family: 'Fira Mono', monospace;
