added painting images

--- a/app/assets/javascripts/assetHelper.js.erb
+++ b/app/assets/javascripts/assetHelper.js.erb
@@ -8,6 +8,16 @@ var assetHelper = {
   "chair.png": "<%= asset_path("chair.png") %>",
   "cupboard.png": "<%= asset_path("cupboard.png") %>",
   "key.png": "<%= asset_path("key.png") %>",
-  "keyclose.png": "<%= asset_path("keyclose.png") %>"
+  "keyclose.png": "<%= asset_path("keyclose.png") %>",
+  "leaves1.png": "<%= asset_path("leaves1.png") %>",
+  "leaves2.png": "<%= asset_path("leaves2.png") %>",
+  "leaves3.png": "<%= asset_path("leaves3.png") %>",
+  "leaves4.png": "<%= asset_path("leaves4.png") %>",
+  "leaves5.png": "<%= asset_path("leaves5.png") %>",
+  "leaves6.png": "<%= asset_path("leaves6.png") %>",
+  "leaves7.png": "<%= asset_path("leaves7.png") %>",
+  "leaves8.png": "<%= asset_path("leaves8.png") %>",
+  "cobweb1.png": "<%= asset_path("cobweb1.png") %>",
+  "cobweb2.png": "<%= asset_path("cobweb2.png") %>",
 
 }
