added leaves, and cobwebs

--- a/app/assets/javascripts/assetHelper.js.erb
+++ b/app/assets/javascripts/assetHelper.js.erb
@@ -19,5 +19,11 @@ var assetHelper = {
   "leaves8.png": "<%= asset_path("leaves8.png") %>",
   "cobweb1.png": "<%= asset_path("cobweb1.png") %>",
   "cobweb2.png": "<%= asset_path("cobweb2.png") %>",
+  "dali.png": "<%= asset_path("dali.png") %>",
+  "damien.png": "<%= asset_path("damien.png") %>",
+  "hopper.png": "<%= asset_path("hopper.png") %>",
+  "starry.png": "<%= asset_path("starry.png") %>",
+  "vangogh.png": "<%= asset_path("vangogh.png") %>",
+  "vermeer.png": "<%= asset_path("vermeer.png") %>"
 
 }
