--- a/app/assets/stylesheets/door_corner.scss
+++ b/app/assets/stylesheets/door_corner.scss
@@ -54,3 +54,27 @@
   margin-top: 140px;
   width: 85px;
 }
+.room-wrapper .cobweb1-img {
+  position:absolute;
+  margin-left: 360px;
+  margin-top: 0px;
+  width: 78px;
+}
+.room-wrapper .cobweb2-img {
+  position:absolute;
+  margin-left: 372px;
+  margin-top: 240px;
+  width: 78px;
+}
+.strange-room-wrapper .cobweb1-img {
+  position:absolute;
+  margin-left: 314px;
+  margin-top: 0px;
+  width: 60px;
+}
+.strange-room-wrapper .cobweb2-img {
+  position:absolute;
+  margin-left: 320px;
+  margin-top: 206px;
+  width: 65px;
+}
