--- a/app/assets/stylesheets/door_corner.scss
+++ b/app/assets/stylesheets/door_corner.scss
@@ -13,7 +13,7 @@
 }
 .strange-room-wrapper .door-img {
   position:absolute;
-  margin-left: 170px;
+  margin-left: 180px;
   margin-top: 17px;
 }
 .strange-room-wrapper .broom-img {
@@ -44,7 +44,7 @@
 }
 .room-wrapper .door-img {
   position:absolute;
-  margin-left: 170px;
+  margin-left: 200px;
   margin-top: 19px;
   width: 108px;
 }
@@ -77,4 +77,15 @@
   margin-left: 320px;
   margin-top: 206px;
   width: 65px;
+}
+.room-wrapper .painting-img {
+  position:absolute;
+  margin-left: 35px;
+  margin-top: 55px;
+  width: 125px;
+}
+.strange-room-wrapper .painting-img {
+  position:absolute;
+  margin-left: 30px;
+  margin-top: 45px;
 }
