form validation & refactoring room escape

--- a/app/assets/javascripts/assetHelper.js.erb
+++ b/app/assets/javascripts/assetHelper.js.erb
@@ -19,11 +19,11 @@ var assetHelper = {
   "leaves8.png": "<%= asset_path("leaves8.png") %>",
   "cobweb1.png": "<%= asset_path("cobweb1.png") %>",
   "cobweb2.png": "<%= asset_path("cobweb2.png") %>",
-  "dali.png": "<%= asset_path("dali.png") %>",
-  "damien.png": "<%= asset_path("damien.png") %>",
-  "hopper.png": "<%= asset_path("hopper.png") %>",
-  "starry.png": "<%= asset_path("starry.png") %>",
-  "vangogh.png": "<%= asset_path("vangogh.png") %>",
-  "vermeer.png": "<%= asset_path("vermeer.png") %>"
+  "painting1.png": "<%= asset_path("painting1.png") %>",
+  "painting2.png": "<%= asset_path("painting2.png") %>",
+  "painting3.png": "<%= asset_path("painting3.png") %>",
+  "painting4.png": "<%= asset_path("painting4.png") %>",
+  "painting5.png": "<%= asset_path("painting5.png") %>",
+  "painting6.png": "<%= asset_path("painting6.png") %>"
 
 }
