--- a/app/assets/stylesheets/clutter_corner.scss
+++ b/app/assets/stylesheets/clutter_corner.scss
@@ -1,7 +1,5 @@
 @import "settings";
-
 .strange-room-wrapper .clutter-tile {
-  background-color: #f2f2f2;
   background-image: url("corner2.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -10,6 +8,7 @@
   width: 520px;
   height: 390px;
   border: 5px solid #816535;
+  z-index:1;
 }
 .strange-room-wrapper .cupboard-img {
   position:absolute;
@@ -42,7 +41,6 @@
   filter: drop-shadow(1px 1px 0px #737373);
 }
 .room-wrapper .clutter-tile {
-  background-color: #f2f2f2;
   background-image: url("corner2.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -64,6 +62,7 @@
   margin-top: 128px;
   width: 82px;
 }
+
 .room-wrapper .book-img {
   position:absolute;
   margin-left: 90px;
