--- a/app/assets/stylesheets/room_tile.scss
+++ b/app/assets/stylesheets/room_tile.scss
@@ -1,5 +1,8 @@
 @import "settings";
 
+#walls {
+  background-color: #f2f2f2;
+}
 .make-room {
   font-family: 'Fira Mono', monospace;
   text-align: center;
@@ -59,7 +62,7 @@
   width: 125px;
 }
 .room-wrapper {
-  margin-top:30px;
+  margin-top:40px;
   display: block;
   margin-left: auto;
   margin-right: auto;
