added parallax effect to homepage

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -54,6 +54,7 @@
   font-family: 'Fira Mono', monospace;
   color: black;
   display: block;
+  position: fixed;
   width: 300px;
   text-align: center;
   margin-left: auto;
