--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -8,13 +8,11 @@
   |
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 </div>
-<div id="base-layer">
+<div id="base-layer" class='back'>
   <div id="layer-one" class="layer">
-    <%= image_tag("window.png", class: 'window') %>
     <div id="layer-two" class="layer">
       <%= image_tag("plant.png", class: 'plant') %>
       <div id="layer-three" class="layer">
-        <%= image_tag("chair.png", class: 'chair') %>
         <div id="layer-four" class="layer">
         </div>
       </div>
