--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -6,16 +6,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+.back {
+  width: 90%;
+  height: 90%;
+}
 #base-layer {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  width: 500px;
   height:90%;
 }
 #layer-one {
     background: transparent;
-    height: 100%;
 }
 #layer-two {
     background: transparent;
@@ -23,15 +25,8 @@
 #layer-three {
     background: transparent;
 }
-.layer .window {
-  margin-left: 20px;
-  margin-top: 170px;
-}
+
 .layer .plant {
-  margin-left: 150px;
+  margin-left: 50%;
   margin-top: 30px;
-}
-.layer .chair {
-  margin-left: 450px;
-  margin-top: 50px;
 }
