--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -9,12 +9,12 @@
 .back {
   width: 90%;
   height: 90%;
+  padding: 20px;
 }
 #base-layer {
-  position: absolute;
   margin-left: auto;
   margin-right: auto;
-  height:90%;
+  height:80%;
 }
 #layer-one {
     background: transparent;
@@ -28,5 +28,5 @@
 
 .layer .plant {
   margin-left: 50%;
-  margin-top: 30px;
+  margin-top: 100px;
 }
