--- a/app/assets/stylesheets/room_tile.scss
+++ b/app/assets/stylesheets/room_tile.scss
@@ -10,6 +10,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+.make-room:hover {
+  font-style: italic;
+}
 #room-form {
   margin-top: 30px;
 }
