--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -27,6 +27,10 @@
 }
 
 .layer .plant {
-  margin-left: 50%;
+  margin-left: 20%;
   margin-top: 100px;
+}
+.layer .chair {
+  margin-top: 100px;
+  margin-left: 85%;
 }
