--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -13,6 +13,7 @@
     <div id="layer-two" class="layer">
       <%= image_tag("plant.png", class: 'plant') %>
       <div id="layer-three" class="layer">
+        <%= image_tag("chair.png", class: 'chair') %>
         <div id="layer-four" class="layer">
         </div>
       </div>
