--- a/app/views/room_mailer/signup_confirmation.html.erb
+++ b/app/views/room_mailer/signup_confirmation.html.erb
@@ -4,9 +4,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Hi</h1>
-    <p>
-      You have signed up for Indoors.
+    <h1>Welcome to Indoors.</h1>
+    <%= image_tag("plant.png", class: 'plant') %>
+    <p
+    <a href='http://in-doors.herokuapp.com/'>Check on your room </a>
     </p>
   </body>
 </html>
